# open_spiel

open_spiel/: CMakeLists.txt  spiel.h  spiel_globals.h
open_spiel/algorithms/: CMakeLists.txt  mcts.cc  mcts.h  mcts_test.cc
open_spiel/algorithms/alpha_zero/: alpha_zero.cc
open_spiel/algorithms/alpha_zero_torch/: CMakeLists.txt  alpha_zero.cc  device_manager.h  model.cc  model.h  vpevaluator.cc  vpnet.cc  vpnet.h
open_spiel/algorithms/dqn_torch/: CMakeLists.txt
open_spiel/algorithms/ziggy_torch/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  device_manager.h  model.cc  model.h  model_test.cc  v_evaluator.cc  v_evaluator.h  v_net.cc  v_net.h  v_net_test.cc  ziggy.cc  ziggy.h  ziggy_test.cc
open_spiel/bots/: CMakeLists.txt
open_spiel/examples/: CMakeLists.txt  alpha_zero_torch_game_example.cc  ziggy_torch_example.cc  ziggy_torch_game_example.cc
open_spiel/game_transforms/: CMakeLists.txt
open_spiel/games/: CMakeLists.txt  backgammon.cc  backgammon.h  backgammon_test.cc  tic_tac_toe.cc  tic_tac_toe.h
open_spiel/python/pybind11/: bots.cc  games_euchre.cc
open_spiel/python/tests/: bot_test.py
open_spiel/python/visualizations/: treeviz.py
open_spiel/scripts/: build_and_run_tests.sh  global_variables.sh
open_spiel/utils/: CMakeLists.txt
